prevent offscreen freeze on ios

--- a/style.css
+++ b/style.css
@@ -275,7 +275,14 @@ textarea {
 }
 
 #vid {
-  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+  pointer-events: none;
+  z-index: -1;
 }
 
 #debug-canvas {
